--- a/FullstackProsjekt/src/frontend/package.json
+++ b/FullstackProsjekt/src/frontend/package.json
@@ -38,6 +38,7 @@
     "start-server-and-test": "^2.0.3",
     "vite": "^5.1.6",
     "vite-plugin-vue-devtools": "^7.0.18",
+    "vite-svg-loader": "^5.1.0",
     "vitest": "^1.4.0"
   }
 }
