added application.properties to communicate with database

--- a/FullstackProsjekt/src/backend/main/resources/application.properties
+++ b/FullstackProsjekt/src/backend/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=FullstackProsjekt
+server.port = 5173
+
+spring.datasource.url=jdbc:h2:tcp://129.241.98.27:9092/~/brainstormer_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
