Update to pom.xml because pipeline could not find main class

--- a/FullstackProsjekt/pom.xml
+++ b/FullstackProsjekt/pom.xml
@@ -71,6 +71,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+                <mainClass>edu.ntnu.idatt2105.FullstackProsjektApplication</mainClass>
+            	</configuration>
 			</plugin>
 		</plugins>
 	</build>
